add docker to project